2002-09-13  Alan Donovan  <adonovan@lcs.mit.edu>

	* src/symbol.cpp (ReadDirectory): Ignore unreadable files (such as
	broken links) - bug 3207.

2002-09-11  Eric Blake  <ebb9@email.byu.edu>

	* src/double.cpp (IEEEfloat(LongInt)): Fix bug in (float)long -
	bug 3272.

2002-09-11  Eric Blake  <ebb9@email.byu.edu>

	* src/bytecode.h:
	* src/bytecode.cpp (InitializeArray, EmitArrayCreationExpression):
	Allow for discarded creation in instanceof - bug 3267.
	(EmitBranchIfExpression, EmitConditionalExpression): Further
	optimizations of ?:, including a fix for VerifyError - bug 3271.
	(EmitCastExpression, StripNops): Elide further unnecessary
	widening casts.
	* src/decl.cpp (CheckMethodOverride): More covariance.
	* src/error.h (InClone): New method.
	* src/expr.cpp (GetAnonymousType): In context of a clone, do not
	process anonymous classes - bug 3273.
	(CanMethodInvocationConvert, CanAssignmentConvertReference),
	(CanCastConvert): Simplify type comparison checks.
	* src/symbol.h (IsSubtype): New method.

2002-09-09  Eric Blake  <ebb9@email.byu.edu>

	General type-handling improvements, including bug 413, 426:
	* src/decl.cpp (ProcessTypeNames): Allow java.java in the unnamed
	package, which does not have subpackages.
	(FindTypeInShadow): Find only accessible types.
	(FindNestedType): Return only accessible types, without error if
	none exists.
	(ReadType): Look for clash with package on failure.
	(ProcessImportQualifiedName): Improve type searching.
	(ProcessPackageOrType): Improve searching, along with error
	messages when not found.
	(ImportType): Return any imported type, accessible or not.
	(FindType): Find only accessible types.
	(MustFindType): Improve error messages when types are not found.
	* src/error.h:
	* src/error.cpp (PACKAGE_NOT_TYPE): New error.
	* src/semantic.h:
	* src/expr.cpp (SimpleNameAccessCheck, TypeNestAccessCheck):
	Delete dead code.
	(TypeAccessCheck): Change to a silent check.

2002-09-05  Eric Blake  <ebb9@email.byu.edu>
