@@ -1,3 +1,15 @@
+2002-09-25  Andrew M. Inggs  <aminggs@yahoo.co.uk>
+
+	* src/m4/ac_try_encoding.m4: Use positive return values to
+	avoid a bug on MSYS (Mingw native build system) where
+	negative return values are seen as 0 at the shell level.
+
+	* configure: regen (by cabbey)
+	
+	* src/stream.cpp (DecodeNextCharacter): If byte-swapping is
+	needed, swap bytes in var next and not those pointed to by
+	chp (since chp is modified by calls to iconv).
+
 2002-09-13  Alan Donovan  <adonovan@lcs.mit.edu>
 
 	* src/symbol.cpp (ReadDirectory): Ignore unreadable files (such as
